# northwind_flask

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  northwind.py  requirements.txt  requirements_local.in  requirements_local.txt  run.sh  setup.cfg  setup.py  setup_library.sh  setup_library_local.sh
app/: __init__.py  models.py
db_backup/: categories.sql  customers.sql  employees.sql  load_data.py  orders.sql  products.sql  shippers.sql  suppliers.sql
migrations/: README  env.py
migrations/versions/: 0dbc11606671_.py  42dced9a9a25_.py  56a3f2296499_.py  675b389fc204_.py  958a22329222_.py  ad4e854a4b93_.py  b812a50211e1_.py  c27a2e221a35_.py  d5d79f067f12_.py  e3049f0f41ef_.py
