[metadata]
author = Zensei Tech Inc.
author-email = barizonte@gmail.com
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
description = scrapers and other gathering tools
long_description = file:README.md
long_description_content_type = text/markdown
license = private
name = Zensei

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.10
test_suite = tests
setup_requires = setuptools
install_requires =
    Flask-PageDown
    Flask-SQLAlchemy
    Flask-WTF
    html5lib
    itsdangerous
    Jinja2
    Mako
    Markdown
    MarkupSafe
    python-dateutil
    python-dotenv
    python-editor
    six
    SQLAlchemy
    visitor
    webencodings
    Werkzeug
    WTForms
    email-validator
    flask-migrate
    Flask-Bootstrap
    Flask-Mail
    Flask-Moment
    Flask-Login
    pyjwt
    gunicorn

packages = find_namespace:

[options.packages.find]
where = .

[pydocstyle]
match-dir = (?!tests)(?!migrations)(?!babel)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
ignore = D200, D203, D213, D406, D407, D413   # Google conventions

[flake8]
max-line-length = 88
doctests = True
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/ , .python_common_env, .pytest_cache, .vscode, log
ignore =
    E203,  # space before : (needed for how black formats slicing)
    W503,  # line break before binary operator
    W504,  # line break after binary operator
    E731,  # do not assign a lambda expression, use a def
    C812,  # missing trailing comma
    D202,  # No blank lines allowed after function docstring

[mypy]
disallow_any_unimported = false
disallow_subclassing_any = false
disallow_untyped_calls = false
disallow_untyped_defs = false
ignore_missing_imports = true
warn_unused_ignores = false
warn_return_any = false

[isort]
profile = black
atomic = true
line_length = 88
force_single_line = true
case_sensitive = false
honor_noqa = true
use_parentheses = true
multi_line_output = 3
